<resources>
    <string name="whiteboard_app_name">WhiteBoard</string>
    <string name="whiteboard_cancel_write">撤销</string>
    <string name="whiteboard_resume_write">恢复</string>
    <string name="whiteboard_pen">画笔</string>
    <string name="whiteboard_eraser">橡皮擦</string>
    <string name="whiteboard_clear_sketch">清空</string>
    <string name="whiteboard_save_sketch">保存</string>
    <string name="whiteboard_exit_sketch">退出</string>
    <string name="whiteboard_save_sketch_success">保存成功</string>
    <string name="whiteboard_clear_sketch_alert">确定清除画笔笔迹？</string>
    <string name="whiteboard_sure">确定</string>
    <string name="whiteboard_cancel">取消</string>
    <string name="whiteboard_rotate_alert">您已开启屏幕自动旋转，屏幕旋转后画笔笔迹将清空。</string>
    <string name="whiteboard_no_ask_again">不再提醒</string>
</resources>
