<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="@dimen/whiteboard_205dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/whiteboard_17dp"
        android:layout_marginTop="@dimen/whiteboard_16dp"
        android:text="@string/whiteboard_clear_sketch_alert"
        android:textColor="#2B2B2B"
        android:textSize="@dimen/whiteboard_12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cancel_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/whiteboard_29dp"
        android:text="@string/whiteboard_cancel"
        android:textColor="#707070"
        android:textSize="@dimen/whiteboard_12sp"
        app:layout_constraintEnd_toStartOf="@+id/sure_tv"
        app:layout_constraintTop_toTopOf="@+id/sure_tv" />

    <TextView
        android:id="@+id/sure_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/whiteboard_12dp"
        android:layout_marginEnd="@dimen/whiteboard_16dp"
        android:layout_marginBottom="@dimen/whiteboard_16dp"
        android:text="@string/whiteboard_sure"
        android:textColor="#03A9F4"
        android:textSize="@dimen/whiteboard_12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_tv"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
